<resources>
    <string name="app_name">BudgetApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Record activity(Income and expenses)!-->
    <string name="record_record">Record</string>
    <string name="record_income">Income</string>
    <string name="record_expense">Expense</string>
    <string name="record_date">Date</string>
    <string name="record_type">Type</string>
    <string name="record_category">Category</string>
    <string name="record_amount">Amount</string>
    <string name="record_content">Content</string>
    <string name="record_picture">Picture</string>
    <string name="record_preview">Preview</string>
    <string name="radioButton_standard">Standard</string>
    <string name="radioButton_quick">Draft</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <!-- End Record activity !-->

    <!-- record_type variable!-->
    <string name="type_cash">Cash</string>
    <string name="type_card">Card</string>
    <string name="type_account">Account</string>
    <string-array name="type_array">
        <item>Cash</item>
        <item>Card</item>
        <item>Account</item>
    </string-array>

    <!--record_category variable!-->
    <string name="category_transportation">Transportation</string>
    <string name="category_healthcare">Healthcare</string>
    <string name="category_food">Food</string>
    <string name="category_social_life">Social Life</string>
    <string name="category_utility">Utility</string>
    <string name="category_household">Household</string>
    <string name="category_transfer">Transfer</string>
    <string name="category_education">Education</string>
    <string name="category_others">Others</string>


    <string-array name="category_expenses_array">
        <item>Food</item>
        <item>Social Life</item>
        <item>Transfer</item>
        <item>Transportation</item>
        <item>Utility</item>
        <item>Household</item>
        <item>Education</item>
        <item>Healthcare</item>
        <item>Others</item>
    </string-array>

    <string-array name="category_income_array">
        <item>Salary</item>
        <item>Bonus</item>
        <item>Transfer</item>
        <item>Investment</item>
        <item>Lottery</item>
    </string-array>

    <string-array name="empty_array"></string-array>
    <!-- Record toaster!-->
    <string name="toaster_provide_date">Please provide date</string>
    <string name="toaster_provide_type">Please provide type</string>
    <string name="toaster_provide_category">Please provide category</string>
    <string name="toaster_provide_amount">Please provide amount</string>
    <string name="toaster_provide_picture">Please provide picture</string>
    <string name="toaster_provide_amountOrPicture">Please provide amount or picture</string>
    <string name="toaster_saved">Saved</string>
    <string name="toaster_failed">Failed to save</string>
    <string name="toaster_saved_draft">Saved as draft</string>

    <string name="title_settings">Settings</string>
    <string name="title_stats">Stats</string>

    <string name="stats_list">List</string>
    <string name="stats_pie">Pie</string>

    <string-array name="stats_month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="stats_type">
        <item>Daily</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="stats_year">
        <item>2018</item>
        <item>2017</item>
        <item>2019</item>
    </string-array>

    <string name="stats_notice">Draft is not counted in this stats</string>

    <string name="home_month_balance">This Month Balance</string>
    <string name="home_month_spending">This month spending</string>
    <string name="list_draft">List of drafts</string>
    <string name="balance_placeholder">RM0.00</string>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="edit">Edit</string>
</resources>


